# agentic_os

./: .gitignore  ASSUMPTIONS.md  CLAUDE.md  MIGRATION.md  PROJECT_ONBOARDING.md  README.md  catalog.example.json  pyproject.toml  pyrightconfig.json
.claude/skills/report-jarvis-bug/: SKILL.md
.claude/skills/shipit/: SKILL.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: codebase-map.md  dev-vs-prod-environments.md  testing.md  work-order-lifecycle.md
brand/: BRAND.md
catalogs/: gonzalo.json
deploy/: jarvis-ui.service.template  jarvis.service.template
docs/: DEPLOYMENT.md
evals/: README.md  conftest.py  test_jarvis_behavior.py  test_neo_behavior.py
evals/llm/: test_jarvis_judgment.py  test_neo_judgment.py
promo/: README.md  capture_screens.py  music.py  render.py  sfx.py
promo/scenes/: base.css  concept.html  fleet.html  neo.html  outro.html  scene.js  showcase.html  spawn.html  title.html  worker.html
scripts/: install_prod_service.sh  shipit.sh
src/jarvis/: __init__.py  bootstrap.py  bugreport.py  catalog.py  central_store.py  claude_cli.py  cli.py  daemon.py  db.py  dispatch.py  hooks.py  neo.py  neo_store.py  notify.py  ops.py  paths.py  project_store.py  testing.py  timeline.py
src/jarvis/ui/: app.py
tests/: conftest.py  test_bootstrap.py  test_bugreport.py  test_catalog.py  test_learning_capture.py  test_neo.py  test_notify.py  test_persona.py  test_pipeline.py  test_shipit.py  test_stores.py  test_timeline.py  test_ui.py  test_wo_cancel.py  test_wo_hide_delete.py
tests_browser/: conftest.py  test_ui_browser.py
(+13 files in other folders)
