[project]
name = "jarvis-os"
version = "0.1.0"
description = "Jarvis — an agentic OS layer that orchestrates Claude Code sessions across your projects"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Gonzalo Raposo" }]
keywords = ["claude", "agents", "orchestration", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
# Core is stdlib-only by design (argparse + sqlite3 + json).
dependencies = []

[project.optional-dependencies]
ui = ["fastapi>=0.110", "uvicorn>=0.29", "jinja2>=3.1"]
dev = ["pytest>=8", "fastapi>=0.110", "uvicorn>=0.29", "jinja2>=3.1", "httpx>=0.27"]

[project.scripts]
jarvis = "jarvis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
